fix: Prevent update covering right sidebar

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -247,7 +247,7 @@ body {
   position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
-  z-index: 1; /* Kind of a hacky fix - makes the drop-down selection not appear underneath the drop-downs that come after this */
+  z-index: 2; /* Kind of a hacky fix - makes the drop-down selection not appear underneath the drop-downs that come after this */
   /* Pimp */
   border: 1px solid;
 }
@@ -1455,6 +1455,7 @@ body {
 }
 /* Sidebar */
 .game-browser__sidebar {
+  z-index: 1;
   --divider-width: 6px;
   display: flex;
   flex: 0 0 auto;
