--- a/static/window/styles/react-datepicker.css
+++ b/static/window/styles/react-datepicker.css
@@ -100,7 +100,7 @@
 }
 
 .react-datepicker-popper {
-  z-index: 1;
+  z-index: 2;
 }
 .react-datepicker-popper[data-placement^=bottom] {
   padding-top: 10px;
@@ -183,7 +183,7 @@
   top: 2px;
   padding: 0;
   border: none;
-  z-index: 1;
+  z-index: 2;
   height: 32px;
   width: 32px;
   text-indent: -999em;
@@ -610,7 +610,7 @@
   width: 50%;
   left: 25%;
   top: 30px;
-  z-index: 1;
+  z-index: 2;
   text-align: center;
   border-radius: 0.3rem;
   border: 1px solid #aeaeae;
